query console z-indexing fixes

--- a/src/web/viewlets/query-console.scss
+++ b/src/web/viewlets/query-console.scss
@@ -11,7 +11,7 @@
   left: 288px;
   background: $lightBg;
   opacity: 0.95;
-  z-index: 10000;
+  z-index: 100000;
   //position: fixed;
   //background: $darkBg;
   //width: calc(100% - 350px - 6px - 300px);
